# MoOS

./: .gitignore  AppIncludes.h  CMakeCache.txt  CMakeLists.txt  Constant.h  GSReverbDecayHandler.cpp  GSReverbDelayHandler.cpp  GSReverbDelayHandler.h  LibPcapAndLiblo.sln  LibPcapAndLiblo.vcxproj  LibPcapAndLiblo.vcxproj.filters  Makefile  PcapDnsProcessing.cpp  PcapDnsProcessing.h  SerialToucheProcessing.cpp  SerialToucheProcessing.h  Youplaboum.xml  cmake_install.cmake  index.html  libboost_serialization-mt.dylib  libgecodeset.35.0.dylib  linkLibScript.sh  params.json  psql.dsn  script.js
CMAKE/: CMakeCache.txt  Makefile  MoOS  cmake_install.cmake
Debug/: CL.read.1.tlog  CL.write.1.tlog  LibPcapAndLiblo.ilk  LibPcapAndLiblo.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
Inputs/: Input.cpp  Input.h
LibLoAndCap/: LibLoAndCap.1  main.cpp
LibLoAndCap.xcodeproj/: project.pbxproj
capture/: CaptureDevice.h  LeapMotionHandler.cpp  LeapMotionHandler.h  OdbcHandler.cpp  OdbcHandler.h  PcapHandler.cpp  PcapHandler.h  ReadWavFileHandler.cpp  ReadWavFileHandler.h  SerialHandler.cpp  SerialHandler.h  VideoOpenCvHandler.cpp  VideoOpenCvHandler.h
data/: GoodOne.xml  locations.csv  savedest.xml
lib/: lo.zippe  pthreads.zippe
lib/boost/: libboost_system-mt.dylib  libboost_thread-mt.dylib
lib/lo/: liblo.dylib  liblo.exp  liblo.la  liblo.lib
lib/portaudio/: libportaudiocpp.0.dylib
lib/pthreads/: Archive.zippe
mapping/: Cell.cpp  Cell.h  Chromosome.cpp  Chromosome.h  Constrain.cpp  Constrain.h  ConstrainGenetic.cpp  ConstrainGenetic.h  Genetic.cpp  Genetic.h  Grid.cpp  Grid.h  GrilleOptions.cpp  GrilleOptions.h  MagicGrid.cpp  MagicGrid.h
outputs/: GSBlankHandler.cpp  GSBlankHandler.h  GSDurationHandler.cpp  GSDurationHandler.h  GSOverlapHandler.cpp  GSParametersHandler.cpp  GSParametersHandler.h  Grain.cpp  Grain.h  GranularSyntheziser.cpp  GranularSyntheziser.h  MidiHandler.cpp  MidiHandler.h  OscHandler.cpp  OscHandler.h  OutputsHandler.cpp  OutputsHandler.h  Parameter.h
outputs/GranularSynth/: GSBlankHandler.cpp  GSDurationHandler.cpp  GSInitPositionHandler.cpp  GSInitPositionHandler.h  GSLowPassCutoffHandler.cpp  GSLowPassCutoffHandler.h  GSOverlapHandler.cpp  GSOverlapHandler.h  GSParametersHandler.cpp  GSParametersHandler.h  GSReverbDecayHandler.h  GSReverbDelayHandler.h  Grain.cpp  Grain.h  GranularSyntheziser.cpp  GranularSyntheziser.h
outputs/Midi/: MidiControlChange.cpp  MidiControlChange.h  MidiNoteDurationHandler.cpp  MidiNoteDurationHandler.h  MidiNoteHandler.cpp  MidiNoteHandler.h  MidiNoteKeyHandler.cpp  MidiNoteKeyHandler.h  MidiNoteVelocityHandler.cpp  MidiNoteVelocityHandler.h  NoteFactoryClass.cpp  NoteFactoryClass.h
processings/: FftProcessing.cpp  FftProcessing.h  LeapHandsProcessing.cpp  LeapHandsProcessing.h  LeapProcessing.h  PcapDhcpProcessing.cpp  PcapDhcpProcessing.h  PcapDnsProcessing.cpp  PcapDnsProcessing.h  PcapEthernetProcessing.cpp  PcapEthernetProcessing.h  PcapGrabAndStorePictures.cpp  PcapGrabAndStorePictures.h  PcapIpProcessing.cpp  PcapIpProcessing.h  PcapKissProcessing.cpp  PcapKissProcessing.h  PcapLocationProcessing.cpp  PcapLocationProcessing.h  PcapPasswordsProcessing.cpp  PcapPasswordsProcessing.h  PcapProcessings.h  PcapRawToAudioProcessing.cpp  PcapRawToAudioProcessing.h  Processings.h  ScalingProcessing.cpp  ScalingProcessing.h  SerialProcessings.h  SerialToucheProcessing.cpp  SerialToucheProcessing.h  Setter.h
rtmidi/: rtmidi.h  rtmidiPriv.h
save/: SaveXml.cpp  SaveXml.h  SerializeXml.cpp  SerializeXml.h  demo_gps.hpp  testSerialisation.cpp  testSerialisation.h
utils/: Converter.cpp  Converter.h  CsvImporter.cpp  CsvImporter.h  CsvRow.cpp  CsvRow.h  HttpClient.cpp  HttpClient.h  IpHeaderDefinitions.h  KymaHandler.cpp  KymaHandler.h  LocationIp.cpp  LocationIp.h  ThreadHttpRequest.cpp  ThreadHttpRequest.h
view/server/: SnfHandler.cpp  SnfHandler.h  mime_types.cpp  request_handler.cpp  request_handler.hpp  (+2 more)
www/: index.html  style.css  text.xml
(+18 files in other folders)
